--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.2",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
